@@ -1,3 +1,7 @@
+2007-06-25  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* GridTest.cs: Added MultipleColumnSpan* tests.
+
 2007-06-24  George Giolfan  <georgegiolfan@yahoo.com>
 
 	* GridTest.cs: Added MinWidthMeasureConstraint test.
